<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_9" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Division" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter two number" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLf-Hj-hqb">
                                <rect key="frame" x="0.0" y="79" width="375" height="21.666666666666671"/>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="center" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1Ro-yD-yC8">
                                <rect key="frame" x="0.0" y="201.66666666666666" width="375" height="40"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IRR-yB-i8a">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="23"/>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" red="1" green="0.44897949729999997" blue="0.29890667009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="calculateBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bh9-fj-QTx"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="289000" translatesAutoresizingMaskIntoConstraints="NO" id="cVc-7I-1hn">
                                <rect key="frame" x="0.0" y="509" width="375" height="283"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Vg6-uk-w9f">
                                <rect key="frame" x="16" y="124.66666666666669" width="140" height="30"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="8jX-ej-udW">
                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                        <color key="backgroundColor" red="1" green="0.44897949729999997" blue="0.29890667009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="VMe-kv-5dB"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZb-YE-ao9">
                                        <rect key="frame" x="35" y="0.0" width="10" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="10" id="O7B-lm-hD9"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxf-Zz-0Br">
                                        <rect key="frame" x="50" y="0.0" width="30" height="30"/>
                                        <color key="backgroundColor" red="1" green="0.44897949729999997" blue="0.29890667009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="5hZ-BY-E7V"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="=" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="trA-eX-mxi">
                                        <rect key="frame" x="85" y="0.0" width="10" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="10" id="nQ6-Tu-Lh4"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="??" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6F-ut-llg">
                                        <rect key="frame" x="100" y="0.0" width="40" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="hx8-sJ-6r2"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="cVc-7I-1hn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="465" id="23I-hd-Ege"/>
                            <constraint firstItem="1Ro-yD-yC8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3T7-5P-V7L"/>
                            <constraint firstItem="Vg6-uk-w9f" firstAttribute="top" secondItem="bLf-Hj-hqb" secondAttribute="bottom" constant="24" id="3YU-n0-DeU"/>
                            <constraint firstItem="1Ro-yD-yC8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="BIM-pC-iYM"/>
                            <constraint firstItem="Vg6-uk-w9f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="JA1-In-Hd3"/>
                            <constraint firstItem="cVc-7I-1hn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="K8l-tf-12Y"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Ro-yD-yC8" secondAttribute="trailing" id="MQW-JQ-rLZ"/>
                            <constraint firstItem="bLf-Hj-hqb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UgH-MB-XhS"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cVc-7I-1hn" secondAttribute="bottom" constant="-14" id="YfJ-zi-s2X"/>
                            <constraint firstItem="1Ro-yD-yC8" firstAttribute="top" secondItem="Vg6-uk-w9f" secondAttribute="bottom" constant="47" id="bB4-lP-67N"/>
                            <constraint firstItem="bLf-Hj-hqb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="g21-MU-pm6"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bLf-Hj-hqb" secondAttribute="trailing" id="ibD-sM-oT0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cVc-7I-1hn" secondAttribute="trailing" id="qtD-de-bGe"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="3T7-5P-V7L"/>
                            </mask>
                        </variation>
                    </view>
                    <connections>
                        <outlet property="firsttextField" destination="8jX-ej-udW" id="WVs-Fj-0bD"/>
                        <outlet property="resultLabel" destination="Y6F-ut-llg" id="6U4-sU-zI6"/>
                        <outlet property="secondTextField" destination="rxf-Zz-0Br" id="eCs-SM-NAH"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="130.40000000000001" y="120.44334975369459"/>
        </scene>
    </scenes>
    <resources>
        <image name="289000" width="225" height="169"/>
    </resources>
</document>
